--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
   "name": "gatsby-starter-contentful-homepage",
   "version": "1.0.0",
+  "private": true,
+  "license": "MIT",
   "engines": {
     "node": ">=18.0.0"
   },
@@ -16,8 +18,6 @@
   },
   "dependencies": {
     "@contentful/rich-text-html-renderer": "^15.11.1",
-    "gatsby-plugin-manifest": "^5.0.0",
-    "gatsby-source-contentful": "^8.0.0",
     "@fontsource/dm-mono": "^4.5.9",
     "@fontsource/dm-sans": "^4.5.8",
     "@vanilla-extract/babel-plugin": "^1.2.0",
@@ -26,8 +26,11 @@
     "@vanilla-extract/webpack-plugin": "^2.1.12",
     "gatsby": "^5.0.0",
     "gatsby-plugin-image": "^3.0.0",
+    "gatsby-plugin-manifest": "^5.0.0",
+    "gatsby-plugin-netlify": "^5.1.0",
     "gatsby-plugin-sharp": "^5.0.0",
     "gatsby-plugin-vanilla-extract": "^4.0.1",
+    "gatsby-source-contentful": "^8.0.0",
     "gatsby-source-filesystem": "^5.0.0",
     "gatsby-transformer-sharp": "^5.0.0",
     "is-absolute-url": "^4.0.1",
@@ -37,14 +40,20 @@
     "sharp": "^0.30.5"
   },
   "devDependencies": {
+    "@babel/core": "^7.12.3",
+    "@babel/eslint-parser": "^7.21.3",
+    "@typescript-eslint/eslint-plugin": "^4.0.0",
+    "@typescript-eslint/parser": "^4.0.0",
     "chalk": "4",
     "contentful-cli": "^1.15.3",
     "contentful-import": "^8.3.2",
     "gatsby-provision-contentful": "^0.0.5",
-    "inquirer": "^8.2.0",
-    "yargs-parser": "^21.0.0",
-    "prettier": "2.5.1",
     "husky": "^7.0.4",
-    "lint-staged": "^12.3.5"
+    "inquirer": "^8.2.0",
+    "lint-staged": "^12.3.5",
+    "prettier": "2.5.1",
+    "typescript": "^4.0.0",
+    "webpack": "^5.20.2",
+    "yargs-parser": "^21.0.0"
   }
 }
